// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a button with custom styles 1`] = `
<DocumentFragment>
  <button
    class="
    bg-transparent-700 hover:bg-transparent-500 text-black-700 
    font-semibold hover:text-black-700 py-2 px-4 border border-black-700 "
    style="background: rgb(0, 119, 181); color: rgb(255, 255, 255);"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`should render a button with custom tailwind classes 1`] = `
<DocumentFragment>
  <button
    class="
    bg-transparent-700 hover:bg-transparent-500 text-black-700 
    font-semibold hover:text-black-700 py-2 px-4 border border-black-700 text-green-500 border-green-500"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`should render a button with text color 1`] = `
<DocumentFragment>
  <button
    class="
    bg-transparent-700 hover:bg-transparent-500 text-green-700 
    font-semibold hover:text-green-700 py-2 px-4 border border-black-700 "
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`should render a rounded button 1`] = `
<DocumentFragment>
  <button
    class="
    bg-transparent-700 hover:bg-transparent-500 text-black-700 
    font-semibold hover:text-black-700 py-2 px-4 border border-black-700 rounded-md "
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`should take a snapshot 1`] = `
<DocumentFragment>
  <button
    class="
    bg-transparent-700 hover:bg-transparent-500 text-black-700 
    font-semibold hover:text-black-700 py-2 px-4 border border-black-700 "
    type="button"
  >
    test button
  </button>
</DocumentFragment>
`;
